--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "dex-template-log",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/demilp/dex-template-log.git"
   },
   "author": "Demián Levy Polat",
   "license": "ISC"
